<package>
  <name>rosbot_rosserial_python </name>
  <version>0.9.2</version>
  <description>
    A Python-based implementation of the rosserial protocol.
  </description>
  <author>firstname lastname</author>
  <maintainer email="example@email.com">firstname lastname</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_python</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>python3-serial</run_depend>
</package>
